--- a/bitnami/cert-manager/test.yaml
+++ b/bitnami/cert-manager/test.yaml
@@ -1,7 +1,7 @@
 ## This is test deployment for Kubernetes platforms.
 ## This is not intended to be used in production.
 ##
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
