Change branch names
Signed-off-by: Fran Mulero <fmulero@vmware.com>

--- a/.github/workflows/vib-verify.yaml
+++ b/.github/workflows/vib-verify.yaml
@@ -7,8 +7,8 @@ on: # rebuild any PRs and main branch changes
       - synchronize
       - labeled
     branches:
-      - master
-      - bitnami:master
+      - main
+      - bitnami:main
 env:
   CSP_API_URL: https://console.cloud.vmware.com
   CSP_API_TOKEN: ${{ secrets.CSP_API_TOKEN }}
