--- a/.github/workflows/vib-verify.yaml
+++ b/.github/workflows/vib-verify.yaml
@@ -71,7 +71,7 @@ jobs:
         run: |
           # bitnami/containers repository is around 2Gb. We can reduce a lot downloading only this file and not the whole repository
           URL=https://raw.githubusercontent.com/${{ github.event.pull_request.head.repo.full_name }}/${{ github.event.pull_request.head.ref }}/.vib/vib-verify.json
-          mkdir -p .vib
+          mkdir -p containers/.vib
           curl -s --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' -X GET -G "$URL" -o .vib/verify.json
       - uses: vmware-labs/vmware-image-builder-action@main
         name: Verify ${{ needs.get-container.outputs.container }}
