--- a/containers/acmesolver/1/debian-11/Dockerfile
+++ b/containers/acmesolver/1/debian-11/Dockerfile
@@ -1,4 +1,5 @@
 FROM docker.io/bitnami/minideb:bullseye
+LABEL maintainer "Bitnami <containers@bitnami.com>"
 
 ENV HOME="/" \
     OS_ARCH="amd64" \
