Disable scheduled workflow
Signed-off-by: Fran Mulero <fmulero@vmware.com>

--- a/.github/workflows/vib-scheduled-verify.yaml
+++ b/.github/workflows/vib-scheduled-verify.yaml
@@ -1,7 +1,8 @@
 name: Scheduled VIB
 on:
-  schedule:
-    - cron: "?/15 * * * *"
+  # Scheduled workflow disabled due to an error in vmware-image-builder-action
+  # schedule:
+  #   - cron: "?/15 * * * *"
   workflow_dispatch:
     inputs:
       container:
