Change pull_request_target event to pull_request
Signed-off-by: Fran Mulero <fmulero@vmware.com>

--- a/.github/workflows/vib-verify.yaml
+++ b/.github/workflows/vib-verify.yaml
@@ -1,11 +1,6 @@
 name: VIB
 on: # rebuild any PRs and main branch changes
-  pull_request_target:
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - labeled
+  pull_request:
     branches:
       - master
       - bitnami:master
