--- a/.github/workflows/vib-verify.yaml
+++ b/.github/workflows/vib-verify.yaml
@@ -2,8 +2,8 @@ name: VIB
 on: # rebuild any PRs and main branch changes
   pull_request:
     branches:
-      - master
-      - bitnami:master
+      - main
+      - bitnami:main
 env:
   CSP_API_URL: https://console.cloud.vmware.com
   CSP_API_TOKEN: ${{ secrets.CSP_API_TOKEN }}
