Use pull_request_target instead of pull_request
Signed-off-by: Fran Mulero <fmulero@vmware.com>

--- a/.github/workflows/vib-verify.yaml
+++ b/.github/workflows/vib-verify.yaml
@@ -1,6 +1,11 @@
 name: VIB
 on: # rebuild any PRs and main branch changes
-  pull_request:
+  pull_request_target:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - labeled
     branches:
       - main
       - bitnami:main
