--- a/containers/airflow/2/debian-11/Dockerfile
+++ b/containers/airflow/2/debian-11/Dockerfile
@@ -1,4 +1,5 @@
 FROM docker.io/bitnami/minideb:bullseye
+LABEL maintainer "Bitnami <containers@bitnami.com>"
 
 ENV BITNAMI_PKG_EXTRA_DIRS="/opt/bitnami/airflow/dags" \
     HOME="/" \
