Enable scheduled job
Signed-off-by: Fran Mulero <fmulero@vmware.com>

--- a/.github/workflows/vib-scheduled-verify.yaml
+++ b/.github/workflows/vib-scheduled-verify.yaml
@@ -1,8 +1,7 @@
 name: Scheduled VIB
 on:
-  # Scheduled workflow disabled due to an error in vmware-image-builder-action
-  # schedule:
-  #   - cron: "?/15 * * * *"
+  schedule:
+    - cron: "?/15 * * * *"
   workflow_dispatch:
     inputs:
       container:
@@ -42,6 +41,7 @@ jobs:
     needs: get-container
     name: Verify
     strategy:
+      fail-fast: false
       matrix:
         flavor:  ${{ fromJSON(needs.get-container.outputs.flavors) }}
     steps:
