With latest vmware-image-builder-action version the problem resolving the SHA_ARCHIVE variable is fixed. We can remove the workaround
Signed-off-by: Fran Mulero <fmulero@vmware.com>

--- a/.github/workflows/vib-scheduled-verify.yaml
+++ b/.github/workflows/vib-scheduled-verify.yaml
@@ -52,11 +52,8 @@ jobs:
       - uses: vmware-labs/vmware-image-builder-action@main
         name: Verify ${{ needs.get-container.outputs.container }}
         with:
-          pipeline: vib-scheduled-verify.json
+          pipeline: vib-verify.json
         env:
-          # This workflow is not triggered by any git event. Instead of using SHA_ARCHIVE we are
-          # setting directly the main branch url.
-          VIB_ENV_URL: https://api.github.com/repos/bitnami/containers/tarball/main
           # Path with docker resources
           VIB_ENV_PATH:  ${{ matrix.flavor }}
           # Container name
